# meetily-memory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  commands.md  contracts.md  development.md  evaluation.md  getting-started.md  integrations.md  knowledge-layer.md  product-evaluation.md  semantic-search.md
eval/: synthetic_dataset.json
scripts/: build-binary.sh  evaluate-retrieval.py  package-release-asset.sh  update-homebrew-formula.sh
src/meetily_memory/: __init__.py  __main__.py  context_builder.py  core.py  domain.py  evaluation.py  integrations.py  json_codec.py  local_memory.py  mcp_server.py  meeting_structure.py  retrieval.py  semantic_search.py  spotlight_export.py  structure_analyzer.py  user_state.py
src/meetily_memory/cli/: app.py  autosync_commands.py  common.py  internal_commands.py  lifecycle_commands.py  llm_commands.py  obsidian_commands.py  renderers.py  search_commands.py  semantic_commands.py
src/meetily_memory/config/: paths.py  settings.py
src/meetily_memory/db/: fts.py  migrations.py  repository.py  rows.py  schema.py
tests/: conftest.py  semantic_helpers.py  test_cli.py  test_core.py  test_domain_contracts.py  test_evaluation.py  test_indexing.py  test_integrations.py  test_json_codec.py  test_mcp_server.py  test_meeting_structure.py  test_paths.py  test_retrieval.py  test_semantic_search.py  test_source_lifecycle.py  test_spotlight_export.py  test_user_state.py
tests/fixtures/: core_v1_contract.json
(+12 files in other folders)
